fix(css): fix firefox display bug
At charitys home template, the project-overview did not align its
content properly. Added clear:both to fix

--- a/src/DotHiv/WebsiteCharityBundle/Resources/lesscss/custom-other.less
+++ b/src/DotHiv/WebsiteCharityBundle/Resources/lesscss/custom-other.less
@@ -179,6 +179,7 @@ h5 {
             white-space: preline;
             overflow: hidden;
             text-overflow: ellipsis;
+            clear: both;
         }
     }
     
